--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,13 @@
   </head>
   <header class="w-full py-4 bg-blue-100 shadow-md">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <div class="flex-1"></div> <!-- Left empty column -->
+      <div class="flex-1"></div>
       <div class="flex-1 flex justify-center">
-        <!-- Center column with links -->
-        <a href="https://www.linkedin.com" class="mx-2 text-red-800 hover:text-blue-800 mr-5">LinkedIn</a>
-        <a href="https://www.github.com" class="mx-2 text-red-800 hover:text-black ml-5 mr-5">GitHub</a>
-        <a href="https://www.twitter.com" class="mx-2 text-red-800 hover:text-blue-600 ml-5">Twitter</a>
+        <a href="https://www.linkedin.com/in/stuartcooper-gh/" class="mx-2 text-red-800 hover:text-blue-800 mr-5">LinkedIn</a>
+        <a href="https://github.com/repoocuts" class="mx-2 text-red-800 hover:text-black ml-5 mr-5">GitHub</a>
+        <a href="https://twitter.com/repoocuts" class="mx-2 text-red-800 hover:text-blue-600 ml-5">Twitter / X</a>
       </div>
-      <div class="flex-1"></div> <!-- Right empty column -->
+      <div class="flex-1"></div>
     </div>
   </header>
   <body>
