--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,56 +1,62 @@
-<div class="min-h-screen flex justify-center items-center bg-blue-100">
-  <h1 class="text-red-800 text-4xl font-bold">Goldsmid House</h1>
+<!--<div class="min-h-screen flex items-center bg-blue-100">-->
+<!--	<div class="grid grid-rows-3 mt-5 tablet:mr-5">-->
+<!--		<div class="grid grid-cols-3 tablet:grid-cols-3">-->
+<!--			<div></div>-->
+<!--			<div class="mr-5 items-top tablet:ml-5">-->
+<!--				<h1 class="text-red-800 text-4xl font-bold">Hi, I'm Stuart</h1>-->
+				<%#= render BlurbComponent.new %>
+<!--			</div>-->
+<!--			<div class="tablet:hidden"></div>-->
+<!--		</div>-->
+
+<!--		<div class="grid grid-cols-3 laptop:content-center">-->
+<!--			<div></div>-->
+<!--			<div class="mt-5 text-right ml-5 flip-card">-->
+				<%#= render(ProjectsComponent.new) %>
+<!--			</div>-->
+<!--			<div></div>-->
+<!--		</div>-->
+
+<!--		<div class="grid grid-cols-3 laptop:content-center">-->
+<!--			<div></div>-->
+<!--			<div>-->
+<!--				<h1 class="text-red-800 text-2xl text-center font-bold">-->
+					<%#= mail_to "stuart@goldsmidhouse.com", "stuart@goldsmidhouse.com" %>
+<!--				</h1>-->
+<!--			</div>-->
+<!--			<div></div>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</div>-->
+
+<div class="-mt-24 relative w-full py-12 px-12 bg-yellow-900">
+	<div class="relative z-10 text-center py-24 md:py-48">
+		<h1 class="text-white text-center text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-display font-bold mb-12">STUART COOPER</h1>
+		<div class="flex-1 flex justify-center">
+			<a href="https://www.linkedin.com/in/stuartcooper-gh/" class="mx-2 text-white hover:text-blue-800 mr-5">LinkedIn</a>
+			<a href="https://github.com/repoocuts" class="mx-2 text-white hover:text-black ml-5 mr-5">GitHub</a>
+			<a href="https://twitter.com/repoocuts" class="mx-2 text-white hover:text-blue-600 ml-5">Twitter / X</a>
+		</div>
+	</div>
+
+	<%= image_tag "logo_de_natas.jpeg", class: "w-full h-full absolute inset-0 object-cover opacity-70" %>
+</div>
+
+<div class="grid grid-cols-1 md:grid-cols-2">
+	<div class="bg-gray-100 p-12 md:p-24 flex justify-center items-center">
+		<div class="max-w-md">
+			<div class="w-24 h-2 bg-yellow-800 mb-4 text-center mx-auto my-auto"></div>
+			<div class="w-full mx-auto my-auto"><%= render BlurbComponent.new %></div>
+		</div>
+	</div>
+</div>
 
 
-  <div id="default-carousel" class="relative w-full" data-carousel="slide">
-    <!-- Carousel wrapper -->
-    <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
-      <!-- Item 1 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="/docs/images/carousel/carousel-1.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
-      <!-- Item 2 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="/docs/images/carousel/carousel-2.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
-      <!-- Item 3 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="/docs/images/carousel/carousel-3.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
-      <!-- Item 4 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="/docs/images/carousel/carousel-4.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
-      <!-- Item 5 -->
-      <div class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="/docs/images/carousel/carousel-5.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-      </div>
-    </div>
-    <!-- Slider indicators -->
-    <div class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse">
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
-    </div>
-    <!-- Slider controls -->
-    <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
-        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-            <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
-            </svg>
-            <span class="sr-only">Previous</span>
-        </span>
-    </button>
-    <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
-        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-            <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-            </svg>
-            <span class="sr-only">Next</span>
-        </span>
-    </button>
-  </div>
-
+<div class="grid grid-cols-1">
+	<div class="p-12 md:p-24 flex justify-center items-center">
+		<div class="max-w-md">
+			<div class="w-24 h-2 bg-yellow-800 mb-4 text-center mx-auto my-auto"></div>
+			<div class="w-full mx-auto my-auto"><%= mail_to('stuart@goldsmidhouse.com', 'Please send me an email if you would like to talk', class: 'text-blue-500 hover:text-blue-700') %></div>
+		</div>
+	</div>
 </div>
