--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,23 +7,42 @@ html * {
     font-family: "Anaheim" !important;
 }
 
-.standard-image {
-    width: 200px;
-    height: 100px;
-    object-fit: contain;
-    object-position: center;
+.scrolling-container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    margin-top: 3em
+
 }
 
-.smaller-image {
-    width: 150px;
-    height: 75px;
-    object-fit: contain;
-    object-position: center;
+.scrolling-images {
+    display: flex;
+    animation: scroll 20s linear infinite;
+    width: calc(200%);
 }
 
-.larger-image {
-    transform: scale(1.75);
-    transform-origin: center;
+.scrolling-images img {
+    width: 250px;
+    height: auto;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.image-wrapper {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 5px;
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
 }
 
 html, body {
@@ -32,10 +51,77 @@ html, body {
     padding: 0;
 }
 
-.text-hidden {
-    display: none;
+footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(250 250 250);
 }
 
-.show-on-hover:hover .text-hidden {
+@keyframes spin {
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(180deg);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
+}
+
+.h1-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    animation: spin 10s infinite;
+}
+
+.h1-front, .h1-back {
+    position: absolute;
+    backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.h1-back {
+    transform: rotateY(180deg);
+}
+
+@keyframes typing {
+    from { max-width: 0 }
+    to { max-width: 100% }
+}
+
+@keyframes blinking {
+    0% {border-right-color: transparent}
+    50% {border-right-color: black}
+    100% {border-right-color: transparent}
+}
+
+.typewriter {
     display: block;
+}
+
+.paragraph {
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 2px solid;
+    width: 0;
+    visibility: hidden;
+}
+
+.typing-active {
+    visibility: visible;
+    border-right: 2px solid black;
+}
+
+.typing-done {
+    width: 100%;
+    border-right: none;
+    visibility: visible;
 }
