--- a/app/frontend/components/blurb_component.html.erb
+++ b/app/frontend/components/blurb_component.html.erb
@@ -1,16 +1,16 @@
-<div data-controller="blurb">
+<div data-controller="blurb-component">
 	<div class="mt-4">
 		<div class="text-left typewriter">
-			<p class="mb-4 paragraph"  data-typewriter-target="paragraph">
+			<p class="mb-4 paragraph"  data-blurb-component-target="paragraph">
 				I'm a Ruby on Rails engineer and strategic communications consultant, currently based in Lisbon, Portugal, operating across the global tech sector for more than a decade through Goldsmid House, a UK registered limited company
 			</p>
-			<p class="mb-4 paragraph" data-typewriter-target="paragraph">With almost a decade of experience as an engineer I have developed and maintained large-scale commercial software in a diverse range of industries including fintech, education, art and logistics</p>
-			<p class="mb-4 paragraph" data-typewriter-target="paragraph">I like working with organisations who do try to impose a positive impact on society. I have lived across Europe and Africa and travelled to many further away places</p>
-			<p class="mb-4 paragraph" data-typewriter-target="paragraph">I enjoy building good products and even better teams, and I firmly believe that the latter makes the former inevitable</p>
-			<p class="mb-4 paragraph" data-typewriter-target="paragraph">I am equally at home in the fast paced world of a growing start up, or embedded within a team of larger and, more complex, organisations</p>
-			<p class="mb-4 paragraph" data-typewriter-target="paragraph">Thanks to my two different commercial backgrounds, I bring a blend of technical and business acumen and am just as comfortable being client facing or just delivering for you</p>
-			<p class="mb-4 paragraph" data-typewriter-target="paragraph">I really value patience, trust and kindness in the work place, and I aim to bring exactly that in all that I do</p>
-			<p class="paragraph" data-typewriter-target="paragraph">Outside of engineering, I'm a keen footballer (soccer if that's your preference), skier and rather terrible, yet enthusiastic oenophile</p>
+			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">With almost a decade of experience as an engineer I have developed and maintained large-scale commercial software in a diverse range of industries including fintech, education, art and logistics</p>
+			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">I like working with organisations who do try to impose a positive impact on society. I have lived across Europe and Africa and travelled to many further away places</p>
+			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">I enjoy building good products and even better teams, and I firmly believe that the latter makes the former inevitable</p>
+			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">I am equally at home in the fast paced world of a growing start up, or embedded within a team of larger and, more complex, organisations</p>
+			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">Thanks to my two different commercial backgrounds, I bring a blend of technical and business acumen and am just as comfortable being client facing or just delivering for you</p>
+			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">I really value patience, trust and kindness in the work place, and I aim to bring exactly that in all that I do</p>
+			<p class="paragraph" data-blurb-component-target="paragraph">Outside of engineering, I'm a keen footballer (soccer if that's your preference), skier and rather terrible, yet enthusiastic oenophile</p>
 		</div>
 	</div>
 </div>
