--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,17 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <header class="w-full py-4 bg-blue-100 shadow-md">
-    <div class="container mx-auto px-4 flex justify-between items-center">
-      <div class="flex-1"></div>
-      <div class="flex-1 flex justify-center">
-        <a href="https://www.linkedin.com/in/stuartcooper-gh/" class="mx-2 text-red-800 hover:text-blue-800 mr-5">LinkedIn</a>
-        <a href="https://github.com/repoocuts" class="mx-2 text-red-800 hover:text-black ml-5 mr-5">GitHub</a>
-        <a href="https://twitter.com/repoocuts" class="mx-2 text-red-800 hover:text-blue-600 ml-5">Twitter / X</a>
-      </div>
-      <div class="flex-1"></div>
-    </div>
-  </header>
   <body>
     <main>
       <%= yield %>
     </main>
+    <footer class="bg-zinc-50 flex items-center justify-center w-full">
+      <div class="p-6 md:p-24 flex flex-col items-center">
+        <div class="w-24 h-2 bg-yellow-800"></div>
+        <div class="mt-5">
+          <%= mail_to('stuart@goldsmidhouse.com', 'Click here to send me an email', class: 'text-blue-500 hover:text-blue-700') %>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
