--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -98,9 +98,8 @@ footer {
 }
 
 @keyframes blinking {
-    0% {border-right-color: transparent}
+    0%, 100% {border-right-color: transparent}
     50% {border-right-color: black}
-    100% {border-right-color: transparent}
 }
 
 .typewriter {
@@ -111,17 +110,29 @@ footer {
     overflow: hidden;
     white-space: nowrap;
     border-right: 2px solid;
-    width: 0;
+    /*width: 0;*/
     visibility: hidden;
+    width: auto;
+    display: inline-block;
 }
 
 .typing-active {
     visibility: visible;
     border-right: 2px solid black;
+    animation: typing 2s steps(40, end);
+}
+
+.blinking {
+    animation: blinking 0.5s step-end infinite;
 }
 
 .typing-done {
     width: 100%;
     border-right: none;
     visibility: visible;
+}
+
+.image-wrapper img {
+    transform: scale(0.5);
+    transform-origin: center;
 }
