--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
 			<a href="https://twitter.com/repoocuts" class="mx-2 text-white hover:text-blue-600">Twitter / X</a>
 		</div>
 	</div>
-	<%= image_tag "logo_de_natas.jpeg", class: "w-full h-full absolute inset-0 object-cover opacity-75" %>
+	<%= image_tag "logo_de_natas.jpg", class: "w-full h-full absolute inset-0 object-cover opacity-75" %>
 </div>
 
 <div class="grid grid-cols-3 bg-zinc-50 p-12 md:p-24 flex justify-center items-center">
