--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,8 +18,8 @@
 <div class="grid grid-cols-3 bg-zinc-50 p-12 md:p-24 flex justify-center items-center">
 	<div></div>
 	<div>
-		<div class="max-w-md w-24 h-2 bg-yellow-800 mb-4 text-center mx-auto my-auto"></div>
-		<div class="bg-zinc-50 px-12 flex w-full mx-auto my-auto"><%= render BlurbComponent.new %></div>
+		<div class="max-w-md w-24 h-2 bg-yellow-800 mb-4 text-center mx-auto"></div>
+		<div class="bg-zinc-50 px-12 flex w-full mx-auto"><%= render BlurbComponent.new %></div>
 	</div>
 	<div></div>
 </div>
