--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -93,13 +93,8 @@ footer {
 }
 
 @keyframes typing {
-    from { max-width: 0 }
-    to { max-width: 100% }
-}
-
-@keyframes blinking {
-    0%, 100% {border-right-color: transparent}
-    50% {border-right-color: black}
+    from { width: 0 }
+    to { width: 100% }
 }
 
 .typewriter {
@@ -108,22 +103,15 @@ footer {
 
 .paragraph {
     overflow: hidden;
-    white-space: nowrap;
-    border-right: 2px solid;
-    /*width: 0;*/
+    white-space: pre-line;
     visibility: hidden;
-    width: auto;
+    position: relative;
     display: inline-block;
 }
 
 .typing-active {
     visibility: visible;
-    border-right: 2px solid black;
-    animation: typing 2s steps(40, end);
-}
-
-.blinking {
-    animation: blinking 0.5s step-end infinite;
+    animation: typing 2s steps(40, end), blinking 0.75s step-end infinite;
 }
 
 .typing-done {
