--- a/app/frontend/components/blurb_component.html.erb
+++ b/app/frontend/components/blurb_component.html.erb
@@ -2,33 +2,19 @@
 	<div class="mt-4">
 		<div class="text-left typewriter">
 			<p class="mb-4 paragraph"  data-blurb-component-target="paragraph">
-				I'm a Ruby on Rails engineer and strategic communications consultant, currently based in
+				I'm a Ruby on Rails engineer and strategic communications consultant, currently based in Lisbon, Portugal, operating across the global tech sector for more than 10 years through Goldsmid House, a UK registered limited company.
+				<br>
+				With almost a decade of experience as an engineer I have developed and maintained large-scale commercial software in a diverse range of industries including fintech, education, art and logistics.
+				<br>
+				I like working with organisations who try and impose a positive impact on society. I have lived across Europe and Africa and travelled to many further away places.
+				<br>
+				I enjoy building good products and even better teams, and I firmly believe that the latter makes the former inevitable. I am equally at home in the fast paced world of a growing start up, or embedded within a team of larger and, more complex, organisations.
+				<br>
+				Thanks to my different commercial backgrounds, I bring a blend of technical and business acumen and am comfortable with client facing roles. I really value patience, trust and kindness in the work place, and I aim to bring exactly that in all that I do.
+				<br>
+				Outside of engineering, I'm a keen footballer (soccer if that's your preference), skier and rather terrible, yet enthusiastic oenophile.
 			</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">
-				Lisbon, Portugal, operating across the global tech sector for more than 10 years through
-			</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">Goldsmid House, a UK registered limited company.</p>
 			<br>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">With almost a decade of experience as an engineer I have developed and maintained</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph"> large-scale commercial software in a diverse range of industries including fintech,</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">education, art and logistics.</p>
-			<br>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">I like working with organisations who try and impose a positive impact on society.</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">I have lived across Europe and Africa and travelled to many further away places.</p>
-			<br>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">I enjoy building good products and even better teams, and I firmly believe that the</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">latter makes the former inevitable.</p>
-			<br>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">I am equally at home in the fast paced world of a growing start up, or embedded within</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">a team of larger and, more complex, organisations.</p>
-			<br>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">Thanks to my different commercial backgrounds, I bring a blend of technical and business</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">acumen and am comfortable with client facing roles.</p>
-			<br>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">I really value patience, trust and kindness in the work place, and I aim to bring exactly</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">that in all that I do.</p>
-			<p class="mb-4 paragraph" data-blurb-component-target="paragraph">Outside of engineering, I'm a keen footballer (soccer if that's your preference), skier and</p>
-			<p class="paragraph" data-blurb-component-target="paragraph">rather terrible, yet enthusiastic oenophile.</p>
 		</div>
 	</div>
 </div>
