--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,16 +15,14 @@
 	<%= image_tag "logo_de_natas.jpg", class: "w-full h-full absolute inset-0 object-cover opacity-75" %>
 </div>
 
-<div class="grid grid-cols-3 bg-zinc-50 p-12 justify-center items-center">
-	<div></div>
-	<div>
+<div class="grid grid-cols-1 tablet:grid-cols-3 bg-zinc-50 p-12 justify-center items-center">
+	<div class="col-start-1 tablet:col-start-2 col-span-1">
 		<div class="max-w-md w-24 h-2 bg-yellow-800 mb-4 text-center mx-auto"></div>
 		<div class="bg-zinc-50 px-12"><%= render BlurbComponent.new %></div>
 	</div>
-	<div></div>
 </div>
 
-<div class="grid p-12 md:p-24 flex justify-center items-center">
+<div class="grid p-12 tablet:p-24 flex justify-center items-center">
 	<div class="text-center">
 		<p>Just some of the things I have worked with</p>
 	</div>
