remove margin from projects

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,10 +22,10 @@
 	</div>
 </div>
 
-<div class="grid p-12 tablet:p-24 flex justify-center items-center">
-	<div class="text-center">
+<div class="grid flex justify-center items-center">
+	<div class="text-center p-8">
 		<p>Just some of the things I have worked with</p>
 	</div>
-	<div class="px-12 flex w-full mx-auto my-auto"><%= render ProjectsComponent.new %></div>
+	<div class="flex w-full mx-auto my-auto"><%= render ProjectsComponent.new %></div>
 	<div></div>
 </div>
